# evals-sovg-samvaad

./: .gitignore  openai_inf.py  readme.txt  test.json  together_client.py
tau-bench/: README.md  run.py
tau-bench/tau_bench/: run.py  types.py
tau-bench/tau_bench/agents/: chat_react_agent.py  few_shot_agent.py  tool_calling_agent.py
tau-bench/tau_bench/envs/: base.py  user.py
tota-benchmarking/: .gitignore  README.md  cloudbuild.yaml  main.py  mypy.ini  poetry.toml  pyproject.toml
tota-benchmarking/docs/: conf.py  index.rst
tota-benchmarking/scripts/: convert_format.py  process_and_upload_dataset.py
tota-benchmarking/scripts/benchmark_analysis/: comparitive_analysis.py
tota-benchmarking/scripts/benchmark_viewer/: app.py
tota-benchmarking/scripts/judge_llm_evaluation/: compare_judge_evals.py  judge_using_llm.py  results_analysis.py
tota-benchmarking/scripts/modelfeedback_automation/: eval.py
tota-benchmarking/tests/: test_config_handler.py  test_evaluator.py  test_tools.py
tota-benchmarking/tota_benchmarking/: __init__.py  benchmark_runner.py  config_handler.py  data_processing.py  evaluation_runner.py  evaluator.py  key_evaluators.py  models.py  prompt_converters.py  reporting.py  schema.py  utils.py
tota-benchmarking/tota_benchmarking/prompts/: converter.py  loader.py
tota-benchmarking/tota_benchmarking/prompts/templates/: conversational_template_trimmed.j2  rag_semantic_similarity_prompt.j2  semantic_similarity_prompt.j2  tota_v6_system_prompt.j2  tota_v7_system_prompt.j2  tota_v8_system_prompt.j2  tota_v8_system_prompt_guidelines.j2
